used w3.css to make things look much nicer

--- a/templates/home_index.html
+++ b/templates/home_index.html
@@ -2,5 +2,7 @@
 
 
 {% block body %}
-<h1>Hello</h1>
-{% endblock %}
+<h1>
+  Welcome to my database! <br> Use the nav bar to nagivate around!
+</h1>
+{% endblock %}  
