--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 </head>
+
+<div class="w3-bar w3-black">
+    <a href="/" class="w3-bar-item w3-button w3-red">Home</a>
+    <a href="/spells" class="w3-bar-item w3-button w3-orange">Spell names</a>
+    <a href="#" class="w3-bar-item w3-button w3-yellow">Link 2</a>
+    <a href="#" class="w3-bar-item w3-button w3-green">Link 3</a>
+  </div>
 <body>
     {% block body %}
     BODY
