--- a/templates/spells_index.html
+++ b/templates/spells_index.html
@@ -9,7 +9,7 @@
     <tr>
         {% for spell in spells %}
         <td>{{ spell }} <div class="w3-container">
-            <a href="/spells/{{ spell }}" class="w3-btn w3-black">{{ spell }}</a></div></td>
+            <a href="/spell/{{ spell }}" class="w3-btn w3-black">{{ spell }}</a></div></td>
     </tr>
     {% endfor %}
     </table>
