added 'add spell' and 'class name' and changed file names

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,8 +11,9 @@
 <div class="w3-bar w3-black">
     <a href="/" class="w3-bar-item w3-button w3-red">Home</a>
     <a href="/spells" class="w3-bar-item w3-button w3-orange">Spell names</a>
-    <a href="#" class="w3-bar-item w3-button w3-yellow">Link 2</a>
-    <a href="#" class="w3-bar-item w3-button w3-green">Link 3</a>
+    <a href="/classes" class="w3-bar-item w3-button w3-yellow">Class names</a>
+    <a href="/add_spell_input" class="w3-bar-item w3-button w3-green">Add spell</a>
+    <a href="#" class="w3-bar-item w3-button w3-blue">Remove spell</a>
   </div>
 <body>
     {% block body %}
