--- a/templates/spells.html
+++ b/templates/spells.html
@@ -2,14 +2,13 @@
 
 
 {% block body %}
-<table class="w3-table w3-hoverable">
+<table class="w3-table">
     <tr class="w3-light-grey">
       <th>Spell name</th>
     </tr>
     <tr>
         {% for spell in spells %}
-        <td>{{ spell }} <div class="w3-container">
-            <a href="/spell/{{ spell }}" class="w3-btn w3-black">{{ spell }}</a></div></td>
+        <td><a href="/spell/{{ spell }}" class="w3-light-grey">{{ spell }}</a></td>
     </tr>
     {% endfor %}
     </table>
