fixed previous error and made spell page more 'pleasing to the eye'

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
     <a href="/spells" class="w3-bar-item w3-button w3-orange">Spell names</a>
     <a href="/classes" class="w3-bar-item w3-button w3-yellow">Class names</a>
     <a href="/add_spell_input" class="w3-bar-item w3-button w3-green">Add spell</a>
-    <a href="remove_spell_input" class="w3-bar-item w3-button w3-blue">Remove spell</a>
+    <a href="/delete_spells_input" class="w3-bar-item w3-button w3-blue">Delete spells</a>
   </div>
 <body>
     {% block body %}
