--- a/templates/delete_spells_input.html
+++ b/templates/delete_spells_input.html
@@ -1,9 +1,9 @@
 {% extends 'layout.html' %}
 {% block body %}
 <h1>Delete spells</h1>
-        <form method="GET" action="{{ url_for('remove_spell_save') }}">
-              <label for="remove_spell" style="margin-left: 25px;"></label>
-              <select multiple name="remove_spell" id="remove_spell">
+        <form method="GET" action="{{ url_for('delete_spells_save') }}">
+              <label for="delete_spells" style="margin-left: 25px;"></label>
+              <select multiple name="delete_spells" id="delete_spells">
                      {% for i in spell_names_remove %}
                       <option value= {{i[0]}}>{{ i[0] }}</option>
                      {% endfor %}
