--- a/templates/spells.html
+++ b/templates/spells.html
@@ -3,14 +3,14 @@
 
 {% block body %}
 <table class="w3-table">
-    <tr class="w3-light-grey">
-      <th>Spell name</th>
+    <tr class="rgb(244, 243, 199)">
+      <th>Spell names <p>(Click on spell name to view it)</p></th>
     </tr>
     <tr>
         {% for i in range(10) %}
         <th>Level {{ i }}</th></tr>
         {% for spell in spells[i] %}
-        <td><a href="/spell/{{ spell }}" class="w3-light-grey">{{ spell }}</a></td>
+        <td><a href=" /spell/{{ spell }}">{{ spell }}</a></td>
       </tr>
     {% endfor %}
     {% endfor %}
