changed formatting to look nicer

--- a/templates/add_spell_input.html
+++ b/templates/add_spell_input.html
@@ -32,6 +32,7 @@ spl, spn, desc, ahl, sch, cls
               <br><br>
               <label for="cls" style="margin-left: 25px;">Classes</label>
               <br>
+              <p>You can select multiple classes by either using the shift key, or the control key.</p>
               <select multiple name="cls" id="cls" style="margin-left: 25px;">
                      {% for i in classes %}
                       <option value= {{i[0]}}>{{ i[0] }}</option>
