--- a/templates/classes.html
+++ b/templates/classes.html
@@ -4,7 +4,7 @@
 {% block body %}
 <table class="w3-table">
     <tr class="rgb(244, 243, 199)">
-      <th>Classes</th>
+      <th>Classes. <p><span style="font-weight:normal;">You can click on a class to view what spells that class can cast.</span></p></th>
     </tr>
     <tr>
         {% for class in classes %}
