--- a/templates/classes.html
+++ b/templates/classes.html
@@ -8,6 +8,7 @@
     </tr>
     <tr>
         {% for class in classes %}
+        <!--Able to click on class name to view what spells that class can cast-->
         <td><a href=" /classes/{{ class }}">{{ class }}</a></td>
     </tr>
     {% endfor %}
