added comments and added a hover on test class.

--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,15 @@
 body {
     background-color: rgb(244, 243, 199);
   }
+.ben_hover:hover {
+    text-decoration: underline;
+    &:hover {
+      color: rgb(253, 40, 97);
+
+      &::before {
+          visibility: visible;
+          -webkit-transform: scaleX(1);
+          transform: scaleX(1);
+      }   
+  }   
+}
