--- a/templates/classes.html
+++ b/templates/classes.html
@@ -9,7 +9,7 @@
     <tr>
         {% for class in classes %}
         <!--Able to click on class name to view what spells that class can cast-->
-        <td><a href=" /classes/{{ class }}">{{ class }}</a></td>
+        <td><a href=" /classes/{{ class }} "class="ben_hover">{{ class }}</a></td>
     </tr>
     {% endfor %}
     </table>
