--- a/templates/failure.html
+++ b/templates/failure.html
@@ -3,6 +3,7 @@
 
 {% block body %}
 <h1>
-  There was already a spell with that name in the database 
+  There was already a spell with that name in the database. Please try again with a different name. <br>
+  If you don't know what spells are in the database, check out the -- Spell names -- tab in the navigation bar
 </h1>
 {% endblock %}  
