--- a/templates/single_class.html
+++ b/templates/single_class.html
@@ -7,10 +7,11 @@
       <th>Spells that {{ class_name }} can cast</th>
     </tr>
       <tr>
+        <!--Give all spells a select class can cast-->
         {% for i in range(10) %}
         <th>Level {{ i }}</th></tr>
             {% for spell in spells[i] %}
-            <td><a href=" /spell/{{ spell }}">{{ spell }}</a></td>
+            <td><a href=" /spell/{{ spell }}"class="ben_hover">{{ spell }}</a></td>
             </tr>
             {% endfor %}
         {% endfor %}
