tidied things up

--- a/templates/failure.html
+++ b/templates/failure.html
@@ -2,8 +2,7 @@
 
 
 {% block body %}
-<h1>
-  There was already a spell with that name in the database. Please try again with a different name. <br>
-  If you don't know what spells are in the database, check out the -- Spell names -- tab in the navigation bar
-</h1>
+<p>
+  You either tried to add a spell that was already in the database, or you didn't select a class. Please try again
+</p>
 {% endblock %}  
